--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 actix-web = "4.11.0"
 redis = "0.32.7"
+time = { version = "0.3.44", features = ["macros", "formatting"]}
