--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4.11.0"
+once_cell = "1.21.3"
 redis = "0.32.7"
 time = { version = "0.3.44", features = ["macros", "formatting"]}
