[new] Change Database from PostgreSQL to SurrealDB!

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-DATABASE_URL="postgres://user:pass@host:port/db-name"
+DATABASE_URL="host:port"
+SURREAL_USERNAME="user"
+SURREAL_PASSWORD="pass"
+SURREAL_NS_NAME="namespace"
+SURREAL_DB_NAME="database"
 REDIS_URL="redis://user:pass@host:port"
 ADMIN_TOKEN="p4938vytiu3ryiupthu3r4hyitph"
