--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ once_cell = "1.21.3"
 redis = "0.32.7"
 serde = "1.0.228"
 time = { version = "0.3.44", features = ["macros", "formatting"]}
-sqlx = { version = "0.8.6", features = [ "postgres", "runtime-tokio", "macros" ] }
 tokio = { version = "1", features = ["full"] }
 dashmap = "6.1.0"
 dotenvy = "0.15.7"
 rand = "0.9.2"
+surrealdb = { version = "2.0", features = ["kv-mem", "protocol-ws"] }
