--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ dashmap = "6.1.0"
 dotenvy = "0.15.7"
 rand = "0.9.2"
 surrealdb = { version = "2.0", features = ["kv-mem", "protocol-ws"] }
+actix-cors = "0.7.1"
