--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ rand = "0.9.2"
 surrealdb = { version = "2.4.0", features = ["kv-mem", "protocol-ws"] }
 actix-cors = "0.7.1"
 futures = "0.3.31"
+actix-ws = "0.3.0"
+futures-util = "0.3.31"
